[package]
name = "scoped-mut-tls"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.0"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
documentation = "https://docs.rs/scoped-mut-tls/0.1.0/scoped-mut-tls"
homepage      = "https://github.com/carllerche/scoped-mut-tls"
repository    = "https://github.com/carllerche/scoped-mut-tls"
readme        = "README.md"
description = """
Library providing `scoped_mut_thread_local!`, a macro enabling mutable
references to be stored in thread-local variables.
"""

[dependencies]
